--- a/hugo.toml
+++ b/hugo.toml
@@ -24,23 +24,28 @@ theme = 'm10c'
     identifier = "home"
     name = "Home"
     url = "/"
+    weight = 10
 
 [[menu.main]]
     identifier = "experience"
     name = "Experience"
     url = "/experience/"
+    weight = 20
 
 [[menu.main]]
     identifier = "education"
     name = "Education"
     url = "/education/"
+    weight = 30
 
 [[menu.main]]
     identifier = "projects"
     name = "Projects"
     url = "/projects/"
+    weight = 40
 
 [[menu.main]]
     identifier = "about"
     name = "About"
     url = "/about/"
+    weight = 50
