--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://nathancmendoza.live/'
 languageCode = 'en-us'
 title = 'Nathan C. Mendoza'
 theme = 'm10c'
