--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,11 +8,11 @@ section:
   template: sections/about.html
 
 # your designation
-designation: Software Engineer
+designation: Recent College Graduate
 # your company information
 company:
-  name: Example Co.
-  url: "https://www.example.com"
+  name: University of California, Irvine
+  url: "https://www.uci.edu"
 
 # your resume. this file path should be relative to you "static" directory
 # Dreprecated. Use resourceLinks instead.
@@ -24,34 +24,13 @@ summary: 'I am a passionate software engineer with x years of working experience
 # your social links
 # give as many as you want. use font-awesome for the icons.
 socialLinks:
-- name: Email
-  icon: "fas fa-envelope"
-  url: "example@gmail.com"
-
 - name: Github
   icon: "fab fa-github"
-  url: "https://www.github.com/example"
-
-- name: Stackoverflow
-  icon: "fab fa-stack-overflow"
-  url: "#"
+  url: "https://www.github.com/nathancmendoza"
 
 - name: LinkedIn
   icon: "fab fa-linkedin"
-  url: "#"
-
-- name: Twitter
-  icon: "fab fa-twitter"
-  url: "#"
-
-- name: Facebook
-  icon: "fab fa-facebook"
-  url: "#"
-
-- name: Mastadon
-  icon: "fab fa-mastodon"
-  url: "#"
-  rel: "me noopener"
+  url: "https://www.linkedin.com/in/nathan-mendoza-23b0a716b"
 
 # You can put custom buttons to link your relevant resources.
 # For example, you can put link for your resume.
