--- a/data/en/sections/about.yaml
+++ b/data/en/sections/about.yaml
@@ -8,7 +8,7 @@ section:
   template: sections/about.html
 
 # your designation
-designation: Recent College Graduate
+designation: Recent College Graduate (Class of 2023)
 # your company information
 company:
   name: University of California, Irvine
@@ -34,9 +34,9 @@ socialLinks:
 
 # You can put custom buttons to link your relevant resources.
 # For example, you can put link for your resume.
-#resourceLinks:
-#- title: "My Resume"
-#  url: "files/resume.pdf"
+resourceLinks:
+- title: "My Resume"
+  url: "files/resume.pdf"
 
 # Show your badges
 # You can show your verifiable certificates from https://www.credly.com.
