Add custom background image

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://hugo-toha.github.io
 
 languageCode: en-us
-title: "John's Blog"
+title: "Nathan's Portfolio"
 theme: "toha"
 
 # Manage languages
@@ -31,12 +31,14 @@ enableEmoji: true
 
 # Site parameters
 params:
+  # background image for the landing image
+  background: "images/site/background.jpg"
   # GitHub repo URL and branch of your site
   gitRepo: https://github.com/nathancmendoza/web-portfolio
   gitBranch: main
 
   # specify whether you want to write some blog posts or not
-  enableBlogPost: true
+  enableBlogPost: false
 
   # specify whether you want to show Table of Contents in reading page
   enableTOC: true
@@ -53,4 +55,4 @@ params:
     # specify which newsletter provider you want to use
     provider: mailchimp
     # specify the target URL for the subscription form
-    mailchimpURL: https://github.us1.list-manage.com/subscribe/post?u=19de52a4603135aae97163fd8&amp;id=094a24c76e
+    mailchimpURL: ""
