Add email in contact info

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -10,6 +10,7 @@ image: "images/avatar/ncm.png"
 contactInfo:
   github: nathancmendoza
   linkedin: nathan-mendoza-23b0a716b
+  email: "nathancm@uci.edu"
 
 # some summary about what I do
 summary:
