--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -18,9 +18,10 @@ experiences:
     start: Sept 2022
     end: June 2023
     responsibilities: 
-      - Utilized a prescribed curriculum to introduce programming to young students.
-      - Adapted lessons and activities to keep students engaged with programming.
-      - Fostered continued interest leading to retention of students.
+      - Instruct and supervise classes of 1 or more students.
+      - Assign homework assignments to help with review of a session's activities and content.
+      - Guide students through the completion of a final project and presentation.
+      - Provided parents with feedback on a per-session basis along with a detailed overall feedback after the end of a course.
 
 - company: 
     name: Box Inc.
@@ -32,9 +33,11 @@ experiences:
     start: June 2022
     end: Sept 2022
     responsibilities:
-      - Developed understanding of practices and tools used to develop and deliver software.
-      - Collaborated with experienced employees to build a new system.
-      - Implemented and tested the first part of a replacement system.
+      - Familiarize myself with the ins-and-outs of professional software development.
+      - Contribute and manage a real-world software project while being able to utilize team resources to assist with completion.
+      - Participate in daily stand-up meetings to report progress and receive guidance on any blockers preventing further progress.
+      - Design, implement, and test a new piece of software in the Python programming language.
+
 
 - company:
     name: "University of California, Irvine"
@@ -46,6 +49,7 @@ experiences:
     start: Sept 2021
     end: June 2022
     responsibilities:
-      - Guided students through coursework in lower division classes.
-      - Explored possible solutions and explained unclear concepts to students.
-      - Reduced the number of students seeking help for their classes by at least 50%
+      - Attend a designated course lab section as a course staff member.
+      - Provide assistance to students with debugging, course assignments, or understanding course concepts.
+      - Keep up to date with course schedule and assignements to provide quality assistance when needed.
+      - Reflect on each lab section attended with a predetermined journaling format.
