--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,7 @@ http {
         server_tokens off;
 
         root /app/public;
+        error_page 404 404.html;
         gzip_static on;
     }
 }
