--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -1,5 +1,5 @@
 # Copyright Notice
-copyright: © 2023 Copyright.
+copyright: © Nathan Mendoza 2023.
 
 # A disclaimer notice for the footer. Make sure you have set "params.footer.disclaimer.enable: true" in your `config.yaml` file.
 disclaimer: "This theme is under MIT license. So, you can use it for non-commercial, commercial, or private uses. You can modify or distribute the theme without requiring any permission from the theme author. However, the theme author does not provide any warranty or takes any liability for any issue with the theme."
@@ -14,3 +14,10 @@ openGraph:
   description: Portfolio and personal blog of Nathan Mendoza.
   image: images/author/ncm.png
   url: https://www.ncm.dev
+
+# Notebook link
+customMenus:
+- name: Notes
+  url: https://university-notebook.ncm.dev
+  hideFromNavbar: false
+  showOnFooter: true
