Ensure relative path usage

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -9,7 +9,7 @@ image: "images/avatar/ncm.png"
 # contact information
 contactInfo:
   github: nathancmendoza
-  linkedin: nathan-mendoza-23b0a716b
+  linkedin: nathancmendoza
   email: "nathancm@uci.edu"
 
 # some summary about what I do
