--- a/config.yaml
+++ b/config.yaml
@@ -35,9 +35,9 @@ params:
   background: "images/site/background.jpg"
   # Logos
   logo:
-    main: /images/site/main-logo.png
-    inverted: /images/site/inverted-logo.png
-    favicon: /images/site/favicon.png
+    main: images/site/main-logo.png
+    inverted: images/site/inverted-logo.png
+    favicon: images/site/favicon.png
   # GitHub repo URL and branch of your site
   gitRepo: https://github.com/nathancmendoza/web-portfolio
   gitBranch: main
