--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -14,7 +14,7 @@ jobs:
       - name: "Install Theme"
         run: |
           wget -c https://github.com/hugo-toha/toha/archive/refs/tags/v3.8.0.tar.gz -O - | tar -xz
-          mv toha-v3.8.0/* themes/toha && rm -rf toha-v3.8.0
+          mv toha-3.8.0/* themes/toha && rm -rf toha-3.8.0
 
       - name: "Setup hugo" 
         uses: peaceiris/actions-hugo@v2
