--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -20,6 +20,7 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 0.118.0
+          extended: true
 
       - name: "Generate Site"
         run: hugo --verbose
