Update notebooks URL

--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -18,6 +18,6 @@ openGraph:
 # Notebook link
 customMenus:
 - name: Notes
-  url: https://university-notebook.ncm.dev
+  url: https://notes.ncm.dev
   hideFromNavbar: false
   showOnFooter: true
