Reword the bullet points in author summary

--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -14,7 +14,7 @@ contactInfo:
 
 # some summary about what I do
 summary:
-  - I am part of the graduating class of 2023.
-  - I believe in data ownership for users.
-  - I think theory has its place in applications.
-  - I am eager to begin my career as a software engineer!
+  - Proud member of the 2023 graduating class.
+  - Strong advocate for user data ownership
+  - Appreciate the practical application of theoretical concepts.
+  - Eagerly anticipating the launch of my career as a software engineer!
