--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -52,3 +52,22 @@ experiences:
       - Provide assistance to students with debugging, course assignments, or understanding course concepts.
       - Keep up to date with course schedule and assignements to provide quality assistance when needed.
       - Reflect on each lab section attended with a predetermined journaling format.
+- company:
+    name: "Union Bank"
+    url: "https://www.usbank.com/index.html"
+    location: "Anaheim, CA"
+    overview: Dispensing both lessons on financial literacy as well as bankable job training for students
+  positions:
+  - designation: Student Banker
+    start: Aug 2018
+    end: May 2019
+    responsibilities:
+      - Serve as a teller at the on-campus branch to provide basic banking services to students and faculty of Loara High School.
+      - Prepare presentation to educate students on various financial literacy topics.
+      - Encourage students to sign up for and use bank services by advertising availabe bank products.
+  - designation: Bank Intern
+    start: June 2018
+    end: Aug 2018
+    responsibilities:
+      - Visit various bank branches across southern California to observe daily operations and security protocols.
+      - Network with bank executives and other back office individuals from multiple departments.
