--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -63,7 +63,7 @@ experiences:
     end: May 2019
     responsibilities:
       - Serve as a teller at the on-campus branch to provide basic banking services to students and faculty of Loara High School.
-      - Prepare presentation to educate students on various financial literacy topics.
+      - Prepare presentations to educate students on various financial literacy topics.
       - Encourage students to sign up for and use bank services by advertising availabe bank products.
   - designation: Bank Intern
     start: June 2018
