--- a/data/en/sections/projects.yaml
+++ b/data/en/sections/projects.yaml
@@ -14,10 +14,26 @@ buttons:
   filter: "academic"
 - name: Hobby
   filter: "hobby"
+- name: Active
+  filter: "active"
 
 
 # your projects
 projects:
+- name: Dotter
+  role: Initial Contributer
+  timeline: "December 2023 - Present"
+  repo: "https://github.com/nathancmendoza/dotter"
+  summary: A command line tool for linking and unlinking dotfile configurations
+  tags: ["hobby", "rust", "active"]
+
+- name: Wardrobe application
+  role: Initial Contributor
+  timeline: "November 2023 - Present"
+  repo: "https://github.com/unknown-wardrobe-app"
+  summary: A web application for managing a personal wardrobe
+  tags: ["hobby", "web-api", "python", "vuejs", "active"]
+
 - name: Idea Bank
   logo: images/projects/idea_bank.png
   role: Backend Lead
