--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ baseURL: https://www.ncm.dev
 
 languageCode: en-us
 title: "Nathan's Portfolio"
-theme: "toha"
+# theme: "toha"
 
 # Manage languages
 # For any more details, you can check the official documentation: https://gohugo.io/content-management/multilingual/
@@ -28,6 +28,20 @@ outputs:
 
 # Enable global emoji support
 enableEmoji: true
+
+# Use Hugo modules to add theme
+module:
+  imports:
+  - path: github.com/hugo-toha/toha/v4
+  mounts:
+  - source: static/files
+    target: static/files
+  - source: ./node_modules/flag-icon-css/flags
+    target: static/flags
+  - source: ./node_modules/@fontsource/mulish/files
+    target: static/files
+  - source: ./node_modules/katex/dist/fonts
+    target: static/fonts
 
 # Site parameters
 params:
