--- a/data/en/site.yaml
+++ b/data/en/site.yaml
@@ -5,13 +5,13 @@ copyright: © Nathan Mendoza 2024.
 disclaimer: "This theme is under MIT license. So, you can use it for non-commercial, commercial, or private uses. You can modify or distribute the theme without requiring any permission from the theme author. However, the theme author does not provide any warranty or takes any liability for any issue with the theme."
 
 # Meta description for your site.  This will help the search engines to find your site.
-description: Portfolio and personal blog of Nathan Mendoza.
+description: Portfolio and of Nathan Mendoza.
 
 # Specify OpenGraph Headers
 openGraph:
   title: Nathan's Portfolio
   type: website
-  description: Portfolio and personal blog of Nathan Mendoza.
+  description: Portfolio of Nathan Mendoza.
   image: images/author/ncm.png
   url: https://www.counttails.com
 
